Ajustes nos metodos bank-statement
