# backend/controllers/transferController.go
@@ -27,6 +27,7 @@ func PostTransfer(c *gin.Context) {
 	}
 	err := MakeTransfer(transfer)
 	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, transfer)
@@ -78,16 +79,9 @@ func FindCardById(cardID string) (models.Card, error) {
 // @Success 200 {array} models.Transfer "Successfully retrieved transfers"
 // @Failure 400 "Bad Request"
 // @Failure 404 "Not Found"
-// @Router /transfers/{user_id} [get]
+// @Router /bank-statement/{user_id} [get]
 func GetTransfers(c *gin.Context) {
-	var requestBody struct {
-		UserID string `json:"user_id"`
-	}
-	if err := c.BindJSON(&requestBody); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request body"})
-		return
-	}
-	userID := requestBody.UserID
+	userID := c.Params.ByName("id")
 	if userID == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "User ID is required"})
 		return
@@ -99,5 +93,40 @@ func GetTransfers(c *gin.Context) {
 		return
 	}
 
+	c.JSON(http.StatusOK, transfers)
+}
+
+// @Summary Get transfers from friends
+// @Description Get transfers from friends based on their IDs
+// @Tags Transfers
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.Transfer
+// @Failure 400 400 "Bad Request"
+// @Failure 404 "Not Found"
+// @Router /account/bank-statement [get]
+func GetTransfersFriends(c *gin.Context) {
+	var friendIDs []string
+
+	if err := database.DB.Table("person_friends").
+		Select("people.id").
+		Joins("JOIN people ON people.id = person_friends.person_id").
+		Group("people.id").
+		Pluck("person_ids", &friendIDs).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	var transfers []models.Transfer
+	for _, friendID := range friendIDs {
+		friendTransfers, err := database.FindTransfers(friendID)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			return
+		}
+		transfers = append(transfers, friendTransfers...)
+	}
+	if transfers == nil {
+		c.JSON(http.StatusNotFound, "")
+	}
 	c.JSON(http.StatusOK, transfers)
 }
