# backend/docs/swagger.json
@@ -17,6 +17,38 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/account/bank-statement": {
+            "get": {
+                "description": "Get transfers from friends based on their IDs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transfers"
+                ],
+                "summary": "Get transfers from friends",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Transfer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/account/card/{id}": {
             "post": {
                 "description": "Create a new card for a person",
@@ -282,46 +314,7 @@
                 }
             }
         },
-        "/person/{id}": {
-            "get": {
-                "description": "Get a person by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Person"
-                ],
-                "summary": "Get Person",
-                "operationId": "get-person",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Person ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved person",
-                        "schema": {
-                            "$ref": "#/definitions/models.Person"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
-        "/transfers/{user_id}": {
+        "/bank-statement/{user_id}": {
             "get": {
                 "description": "Get transfers by user ID",
                 "consumes": [
@@ -352,6 +345,45 @@
                             "items": {
                                 "$ref": "#/definitions/models.Transfer"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/person/{id}": {
+            "get": {
+                "description": "Get a person by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Person"
+                ],
+                "summary": "Get Person",
+                "operationId": "get-person",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Person ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved person",
+                        "schema": {
+                            "$ref": "#/definitions/models.Person"
                         }
                     },
                     "400": {
